# auction-competition-heat-tracker

./: .env.example  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 035210435ff8_initial_schema.py
docs/superpowers/plans/: 2026-07-02-plan1-foundation-and-data-layer.md  2026-07-02-plan2a-adapters-parsers-matching.md
docs/superpowers/specs/: 2026-07-02-auction-competition-heat-tracker-design.md
src/auction_tracker/: __init__.py  config.py  db.py  models.py  normalize.py
src/auction_tracker/repositories/: watchlist.py
src/auction_tracker/sources/: base.py  http_client.py  matching.py  types.py
src/auction_tracker/sources/adapters/: onbid.py  tank.py
src/auction_tracker/sources/parse/: courtauction.py  dooin.py  ggi.py  onbid.py  tank.py  values.py
tests/: conftest.py  test_config.py  test_db_smoke.py  test_migration.py  test_models.py  test_normalize.py  test_watchlist_repo.py
tests/fixtures/courtauction/: NOTES.md
tests/fixtures/dooin/: NOTES.md
tests/fixtures/ggi/: NOTES.md
tests/fixtures/onbid/: NOTES.md  item.json
tests/fixtures/tank/: NOTES.md  list.json
tests/sources/: test_adapters.py  test_base.py  test_http_client.py  test_matching.py  test_parse_courtauction.py  test_parse_dooin.py  test_parse_ggi.py  test_parse_onbid.py  test_parse_tank.py  test_parse_values.py  test_types.py
