[project]
name = "auction-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Claude Code", email = "noreply@anthropic.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
]

[project.scripts]
auction-tracker = "auction_tracker:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
